Improve idea-to-code workflow prompts for better specification and plan generation
Key prompt improvements:
- idea-brainstorm.md: Add clear idea classification (user feature, POC, platform, educational)
  and iterative question process with explicit stopping point
- idea-create-spec.md: Generate type-specific specifications based on classification
  (PRD for features, Architecture Validation for POCs, etc.)
- Add prompt templates for plan creation and implementation with steel-thread methodology

Supporting changes:
- Move plan prompts to prompt-templates/ directory with envsubst variable support
- Remove deprecated idea-create-implementation-plan.md command
- Update shell scripts to use new prompt templates
- Add .gitignore entries for test files

Co-authored by Claude Code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ JUNK-*
 **/.claude/sessions
 **/.claude/issues
 .claude/settings.local.json
+tests/kafka-security-poc/kafka-security-poc-discussion.md
+tests/kafka-security-poc/kafka-security-poc-idea.txt
+tests/kafka-security-poc/kafka-security-poc-plan.md
+tests/kafka-security-poc/kafka-security-poc-sessionID.txt
+tests/kafka-security-poc/kafka-security-poc-spec.md
