--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tests/kafka-security-poc/kafka-security-poc-idea.txt
 tests/kafka-security-poc/kafka-security-poc-plan.md
 tests/kafka-security-poc/kafka-security-poc-sessionID.txt
 tests/kafka-security-poc/kafka-security-poc-spec.md
+repomix-output.xml
