Add design document workflow and enhance testing infrastructure
- Add create-design-doc.sh script and prompt template with four architectural
  views (Domain, Component, Deployment, Build) plus optional UI/UX and Security
  sections
- Add /review-design-doc command for interactive design decision review
- Enhance test-runner-java-gradle skill with incremental testing workflow
  (unit -> integration -> component -> end-to-end)
- Update testing-scripts-and-infrastructure skill guidelines
- Replace make-plan v2 as the default version with validation and auto-repair
- Add kafka-security-poc and simple-compose-project test examples
- Update plugin.json with new commands and skills

Co-authored by Claude Code

--- a/config-files/settings.local.json
+++ b/config-files/settings.local.json
@@ -34,7 +34,11 @@
       "Bash(chmod:*)",
       "Bash(git ls-tree:*)",
       "Bash(gh run:*)",
-      "Bash(git mv:*)"
+      "Bash(git mv:*)",
+      "Bash(git check-ignore:*)",
+      "Bash(mkdir -p:*)",
+      "Bash(./test-scripts/test-*.sh)",
+      "Bash(docker compose config:*)"
     ],
     "deny": [
       "Bash(docker compose down:*)",
