Add plan-file-management skill with fix-numbering and spec/plan docs
- Add plan-file-management skill with fix-plan-numbering.py script
- Add spec, plan, idea, and discussion docs (pivoted from MCP to CLI script)
- Add pytest tests for fix_numbering and CI workflow
- Register skill in plugin.json and CLAUDE.md
- Reference skill in implement-plan and revise-plan prompt templates
- Add test-end-to-end.sh runner (pytest only, no MCP smoke test)

Co-authored by Claude Code

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ tests/kafka-security-poc/kafka-security-poc-sessionID.txt
 tests/kafka-security-poc/kafka-security-poc-spec.md
 repomix-output.xml
 *-sessionID.txt
+__pycache__
+debug.log
