--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
-name = "i2c"
+name = "i2code"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = ["click"]
 
 [project.scripts]
-i2c = "i2c.cli:main"
+i2code = "i2code.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/i2c"]
+packages = ["src/i2code"]
