--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "i2code"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = ["click"]
+dependencies = ["click", "GitPython"]
 
 [project.scripts]
 i2code = "i2code.cli:main"
