Move session and issue tracking from .claude/ to .hitl/
Update session-recorder, issue-session-tagger, and claude-issue-report
to write to .hitl/sessions and .hitl/issues instead of .claude/sessions
and .claude/issues.

Add `i2code manage-tracking` command with:
- --migrate: moves .claude/{issues,sessions} to .hitl/, handles symlinks
  by transferring them, merges directory contents into symlink targets,
  removes stale debug.log, updates .gitignore, warns about subdirectories
  no longer covered by gitignore
- --link DIR: symlinks .hitl/{issues,sessions} to DIR/{issues,sessions}
- --dry-run: preview changes without modifying anything

Co-authored by Claude Code

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 JUNK-*
 *.code-workspace
-**/.claude/sessions
-**/.claude/issues
+**/.hitl
 .claude/settings.local.json
 tests/kafka-security-poc/kafka-security-poc-discussion.md
 tests/kafka-security-poc/kafka-security-poc-idea.txt
