Extract task execution prompt to Jinja2 template
Move the f-string prompt in build_claude_command to a Jinja2 template
file (task_execution.j2) for easier editing. Add a shared
render_template() helper in i2code.templates that loads templates from
the caller's package via importlib.resources, so any subpackage with a
templates/ directory can reuse it.

Co-authored by Claude Code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "i2code"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = ["click", "GitPython"]
+dependencies = ["click", "GitPython", "Jinja2"]
 
 [project.scripts]
 i2code = "i2code.cli:main"
