Ensure all tests are discoverable and executed by the test runner
- Move test fixture directories (kafka-security-poc, simple-compose-project)
  from tests/ to test-ideas/ so pytest doesn't scan them
- Consolidate test-end-to-end.sh into a single pytest invocation for unit
  tests, add integration test step, and add unmarked-test verification
- Add @pytest.mark.unit to tracking tests and conftest.py auto-markers
  for plan-domain/ and plan-manager/ directories
- Rename test-cli-smoke.sh to test-plan-cli-smoke.sh
- Update references in .gitignore, test scripts, and integration tests

Co-authored by Claude Code

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 JUNK-*
 *.code-workspace
 **/.hitl
+.claude/sessions
+.claude/issues
 .claude/settings.local.json
-tests/kafka-security-poc/kafka-security-poc-discussion.md
-tests/kafka-security-poc/kafka-security-poc-idea.txt
-tests/kafka-security-poc/kafka-security-poc-plan.md
-tests/kafka-security-poc/kafka-security-poc-sessionID.txt
-tests/kafka-security-poc/kafka-security-poc-spec.md
+test-ideas/kafka-security-poc/kafka-security-poc-discussion.md
+test-ideas/kafka-security-poc/kafka-security-poc-idea.txt
+test-ideas/kafka-security-poc/kafka-security-poc-plan.md
+test-ideas/kafka-security-poc/kafka-security-poc-sessionID.txt
+test-ideas/kafka-security-poc/kafka-security-poc-spec.md
 repomix-output.xml
 *-sessionID.txt
 __pycache__
 debug.log
+.idea
+
