Add integration_gh marker to exclude GitHub-dependent tests from CI
Tests requiring gh authentication are marked integration_gh and excluded
from CI runs, which lack a GH_TOKEN. The end-to-end script runs them
locally when CI env var is not set.

Co-authored by Claude Code

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     unit: Fast unit tests (no external dependencies)
     integration: Slower tests requiring git/GitHub
+    integration_gh: Integration tests requiring GitHub CLI authentication
