Move pre-commit.sh to test-scripts/test-precommit.sh
Co-authored by Claude Code

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: precommit-check
         name: Run precommit.sh checks
-        entry: ./pre-commit.sh
+        entry: ./test-scripts/test-precommit.sh
         language: script
         pass_filenames: false
         always_run: true
