Use GH_TEST_ORG env var for integration test repo creation
Replace get_github_username() with GH_TEST_ORG environment variable
so integration_gh tests create repos under a configurable test
organization. Add GH_TEST_ORG secret to CI workflow.

Co-authored by Claude Code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,5 @@ jobs:
       - name: Run integration_gh tests
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TEST_ORG: ${{ secrets.GH_TEST_ORG }}
         run: uv run --python 3.12 python3 -m pytest tests/ -v -m integration_gh
