Configure gh credential helper for git push in CI
gh repo clone sets HTTPS remote URLs but git push still needs
credentials. gh auth setup-git registers the credential helper
so all git operations authenticate via GH_TOKEN.

Co-authored by Claude Code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
+      - name: Configure git to use gh for authentication
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: gh auth setup-git
+
       - name: Run integration_gh tests
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
