Add ruff lint check to pre-commit hook and commit guidelines
Add a pre-commit hook that runs `uvx ruff check --fix` on Python
files to auto-fix lint issues. The hook always succeeds so it
never blocks commits. Also add a lint check step to the commit
guidelines skill.

Co-authored by Claude Code

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 repos:
   - repo: local
     hooks:
+      - id: ruff-check
+        name: Run ruff check --fix
+        entry: bash -c 'uvx ruff check --fix; true'
+        language: system
+        types: [python]
+        pass_filenames: false
       - id: precommit-check
         name: Run precommit.sh checks
         entry: ./test-scripts/test-precommit.sh
