Add script runner with bundled scripts and prompt templates
Bundle 14 shell scripts in src/i2code/scripts/ and 10 prompt templates
in src/i2code/prompt-templates/ as package data. Add run_script() that
resolves bundled script paths, ensures execute permission, forwards
arguments to subprocess.run, and propagates exit codes.

Co-authored by Claude Code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ select = ["E4", "E7", "E9", "F", "PLC0415"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/i2code"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/i2code/scripts" = "i2code/scripts"
+"src/i2code/prompt-templates" = "i2code/prompt-templates"
