--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,13 +7,15 @@ repos:
         language: system
         types: [python]
         pass_filenames: false
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.24.2
+    hooks:
+      - id: gitleaks
+  - repo: local
+    hooks:
       - id: precommit-check
         name: Run precommit.sh checks
         entry: ./test-scripts/test-precommit.sh
         language: script
         pass_filenames: false
         always_run: true
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.24.2
-    hooks:
-      - id: gitleaks        
