Add triage debug logging and fix stream-json parsing in PR review processor
- Add _extract_result_text to parse Claude stream-json output format
- Add error logging to _parse_triage_result for parse failures
- Log triage prompt and response to ~/.hitl/<worktree>/logs/log.log
- Extract _process_fix_group, _invoke_fix, _push_and_reply, _wait_for_ci_if_needed
  from _apply_fix_groups to reduce cyclomatic complexity
- Bundle feedback lists as tuple to reduce argument counts
- Add fixture-based tests using real PR #6 data
- Register manual and gather_fixtures pytest marks
- Accept manual as a recognized marker in test verification script

Co-authored by Claude Code

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ markers =
     unit: Fast unit tests (no external dependencies)
     integration: Slower tests requiring git/GitHub
     integration_gh: Integration tests requiring GitHub CLI authentication
+    manual: Tests that require manual invocation (e.g. real Claude calls)
+    gather_fixtures: Tests that fetch real data from external services and write fixture files
