Scope precommit-check hook to src/, test-scripts/, and tests/ directories
Replaces always_run: true with a files filter so docs-only commits
skip the end-to-end test suite.

Co-authored by Claude Code

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,4 +22,4 @@ repos:
         entry: ./test-scripts/test-precommit.sh
         language: script
         pass_filenames: false
-        always_run: true
+        files: ^(src/|test-scripts/|tests/)
