--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,12 @@ repos:
       - id: gitleaks
   - repo: local
     hooks:
+      - id: plugin-javascript-tests
+        name: Run plugin JavaScript tests
+        entry: ./test-scripts/test-plugin-javascript.sh
+        language: script
+        pass_filenames: false
+        files: ^hooks/.*\.js$
       - id: precommit-check
         name: Run precommit.sh checks
         entry: ./test-scripts/test-precommit.sh
